# wax

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  QUICKSTART.md  README.md  test-waxc.sh
cmake/: CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
examples/: bf.wax  delaunay.wax  fib.wax  flocking.wax  helloworld.wax  hilbert.wax  kmeans.wax  line.wax  nqueens.wax  poissondisk.wax  qsort.wax  quine.wax  ray.wax  raycast.wax  traceskeleton.wax  turing.wax  vororelax.wax
site/: index.html  waxc.js
src/: CMakeLists.txt  common.c  common.h  parser.c  parser.h  tac.c  tac.h  text.c  text.h  to_c.c  to_c.h  to_cpp.c  to_cpp.h  to_cs.c  to_cs.h  to_java.c  to_java.h  to_json.c  to_json.h  to_lua.c  to_lua.h  to_py.c  to_py.h  to_swift.c  to_swift.h  to_ts.c  to_ts.h  to_wat.c  to_wat.h  waxc.c  waxc_lib.c  waxc_lib.h  waxy.c
src/std/: math.wat  math.wax  std.c  std.cpp  std.cs  std.java  std.lua  std.py  std.swift  std.ts  std_arr.wat  std_import.wat  std_malloc.wat  std_map.wat  std_stack.wat  std_str.wat
tools/: concat.py  make_site.js  runner.py  waxwasmwrap.js
